# hirn

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  openapi.yaml
crates/hirn/: Cargo.toml  README.md
crates/hirn-bench/: Cargo.toml  README.md
crates/hirn-bench/src/: compare.rs  dataset.rs  lib.rs  load.rs  main.rs  metrics.rs  output.rs  provenance.rs  runner.rs  storage.rs
crates/hirn-bench/src/advanced/: mod.rs  runner.rs  tracker.rs
crates/hirn-bench/src/cognitive/: baselines.rs  eval.rs  external.rs  loader.rs  mod.rs  openai.rs  precompute.rs  runner.rs  synthetic.rs  tracker.rs
crates/hirn-bench/tests/: advanced.rs  cognitive.rs  dmr.rs  load.rs  locomo.rs  longmemeval.rs
crates/hirn-core/: Cargo.toml  README.md
crates/hirn-core/proptest-regressions/: record.txt
crates/hirn-core/src/: agent.rs  audit.rs  causal.rs  circuit_breaker.rs  config.rs  content.rs  embed.rs  embedding_dimension.rs  episodic.rs  error.rs  id.rs  interner.rs  lib.rs  metadata.rs  namespace.rs  offline.rs  procedural.rs  prospective.rs  provenance.rs  quarantine.rs  record.rs  resource.rs  revision.rs  sanitize.rs  semantic.rs  stats.rs  svo_event.rs  text_util.rs  timestamp.rs  tokenizer.rs  types.rs  working.rs
crates/hirn-core/tests/: docs_smoke.rs  proptest_types.proptest-regressions  proptest_types.rs
crates/hirn-engine/: Cargo.toml  README.md
crates/hirn-engine/benches/: consolidation_ops.rs  event_bus.rs  graph_ops.rs  lance_ops.rs  ql_ops.rs  scaling.rs  semantic_revision_ops.rs  think_assembly.rs
crates/hirn-engine/src/: adaptive.rs  agent_context.rs  backup.rs  error.rs  export.rs  index_advisor.rs  integrity.rs  lib.rs  policy.rs  provider_registry.rs  resource_presentation.rs  result_json.rs  scoring.rs  security.rs  watch.rs
crates/hirn-engine/src/admission/: candidate.rs  decision.rs  mod.rs  pipeline.rs
crates/hirn-engine/src/cedar/: default.cedar  hirn.cedarschema
crates/hirn-engine/src/consolidation/: community.rs  compactor.rs  concept.rs  dream_cycle.rs  evolution.rs  forgetting.rs  mod.rs  narrative.rs  pattern.rs  pipeline.rs  raptor.rs  reconsolidation.rs  scheduler.rs  segmentation.rs
crates/hirn-engine/src/db/: admission_runtime.rs  cross_agent.rs  episodic.rs  event_runtime.rs  graph_ops.rs  graph_runtime.rs  mod.rs  mutation_contract.rs  namespace.rs  namespace_runtime.rs  offline_scheduler_runtime.rs  persistence.rs  policy_runtime.rs  procedural.rs  provider_runtime.rs  query_exec.rs  query_runtime.rs  recall_exec.rs  semantic.rs  services.rs  working.rs  (+3 more)
crates/hirn-engine/tests/: backup_restore_integration.rs  causal_integration.rs  cedar_enforcement_integration.rs  concurrent_stress.rs  consolidation_integration.rs  context_integration.rs  diagnostics_integration.rs  e2e_validation.rs  event_log_integration.rs  fullstack_smoke.rs  golden_recall_suite.rs  graph_store.rs  integration.rs  metrics_integration.rs  multiagent_integration.rs  nonsemantic_revision_integration.rs  offline_scheduler_integration.rs  persistent_graph_integration.rs  pipeline_integration.rs  procedural_execution.rs  ql_integration.rs  runtime_boundary_guard.rs  security_integration.rs  semantic_revision_integrity.rs  service_views.rs  storage_batching_integration.rs  storage_integration.rs  toolkit_integration.rs  tracing_integration.rs  write_path_explanation_integration.rs  write_path_integration.rs
crates/hirn-exec/: Cargo.toml  README.md
crates/hirn-exec/benches/: udf_ops.rs
crates/hirn-exec/src/: extensions.rs  lib.rs  planner.rs  test_utils.rs
crates/hirn-graph/: Cargo.toml  README.md
crates/hirn-graph/benches/: graph_ops.rs
crates/hirn-graph/src/: activation.rs  graph.rs  hebbian.rs  lib.rs
crates/hirn-graph/tests/: proptest_graph.rs
crates/hirn-node/: Cargo.toml  README.md  bridge.js  embeddings.js  errors.js  index.d.ts  index.js  index.mjs  memory.js  package.json
crates/hirn-node/scripts/: stage-local-binary.js
crates/hirn-node/src/: lib.rs
crates/hirn-node/tests/: test_concurrent.mjs  test_hirn.mjs
crates/hirn-policy/: Cargo.toml  README.md
crates/hirn-policy/src/: audit.rs  engine.rs  error.rs  lib.rs
crates/hirn-policy/tests/: docs_smoke.rs
crates/hirn-provider/: Cargo.toml  README.md
crates/hirn-provider/src/: lib.rs  metrics.rs  tokenizer.rs  transport.rs
crates/hirn-python/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/hirn-python/src/: lib.rs
crates/hirn-python/tests/: test_hirn.py
crates/hirn-query/: Cargo.toml  README.md
crates/hirn-query/benches/: parse_ops.rs
crates/hirn-query/src/: lib.rs
crates/hirn-query/tests/: docs_smoke.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs
crates/hirn-storage/: Cargo.toml  README.md
crates/hirn-storage/src/: cache.rs  compaction.rs  embed_cache_ops.rs  embedding_registry.rs  engine.rs  error.rs  fragment_cache.rs  index.rs  lance_store.rs  lib.rs  memory_store.rs  multimodal.rs  multivector.rs  mutation_envelope_ops.rs  namespace.rs  policy_store.rs  reranker.rs  resource_ops.rs  scan.rs  session.rs  store.rs  with_embeddings.rs
crates/hirn-storage/tests/: conformance.rs  lance_integration.rs
crates/hirn/examples/: basic_usage.rs  consolidation.rs  hirnql.rs  multi_agent.rs  openai_embeddings.rs  personal_assistant.rs  resource_memory.rs
crates/hirn/src/: lib.rs  memory.rs
crates/hirn/tests/: e2e_full_pipeline.rs  hirnql_regression.rs  multimodal_integration.rs  perf_regression_guard.rs  sdk_e2e.rs
crates/hirnd/: Cargo.toml  README.md  build.rs
crates/hirnd/examples/: gen_seed.rs
crates/hirnd/proto/: hirn.proto
crates/hirnd/src/: auth.rs  config.rs  convert.rs  coordination.rs  dynamo.rs  grpc.rs  http.rs  lib.rs  main.rs  mcp.rs  realm.rs  throttle.rs  tls.rs  watch.rs
crates/hirnd/tests/: cli.rs  config_ops.rs  crash_recovery.rs  cross_interface.rs  grpc_integration.rs  integration.rs  mcp_integration.rs  proto_roundtrip.rs  raft_integration.rs  realm_isolation.rs  tls_integration.rs  token_session.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: hirnql_parse.rs  lance_filter.rs
(+230 files in other folders)
