[package]
name = "hirn-core"
description = "Core types for the hirn cognitive memory database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
ulid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
blake3 = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
