[package]
name = "hirn-node"
description = "Node.js bindings for the hirn cognitive memory database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false  # Distributed via npm (napi-rs), not crates.io

[lib]
crate-type = ["cdylib"]

[dependencies]
hirn = { workspace = true }
hirn-storage = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = { workspace = true }

# Override workspace lints — napi-rs requires unsafe internally
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
# FFI binding crate — relaxed lints (wrapper code, not core logic)
all = "allow"
pedantic = "allow"
nursery = "allow"
