[package]
name = "hirn-policy"
description = "Cedar-based authorization engine for hirn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hirn-core = { workspace = true }
cedar-policy = { workspace = true, optional = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["cedar"]
cedar = ["dep:cedar-policy"]
